exports[`client > reducers > organization generic reducer tests should handle add organization 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
}
`;

exports[`client > reducers > organization generic reducer tests should handle delete organization 1`] = `Object {}`;

exports[`client > reducers > organization generic reducer tests should handle set organization 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
  "organization-2": Object {
    "agencyId": "agency-2",
    "analyses": Array [
      "analysis-2",
    ],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [
      "group-2",
    ],
    "id": "organization-2",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [
      "site-2",
    ],
  },
}
`;

exports[`client > reducers > organization generic reducer tests should handle set organizations 1`] = `
Object {
  "organization-1": Object {
    "agencyId": "agency-3",
    "analyses": Array [],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [],
    "id": "organization-1",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [],
  },
  "organization-2": Object {
    "agencyId": "agency-2",
    "analyses": Array [
      "analysis-2",
    ],
    "contact": "someone",
    "email": "abc@def.ghi",
    "groups": Array [
      "group-2",
    ],
    "id": "organization-2",
    "logo_url": "https://placekitten.com/80/80",
    "main_url": "https://placekitten.com/",
    "name": "Mock Organization",
    "sites": Array [
      "site-2",
    ],
  },
}
`;
